--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,14 @@
       <artifactId>json</artifactId>
       <version>20240303</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>com.yahoofinance-api</groupId>
+      <artifactId>YahooFinanceAPI</artifactId>
+      <version>3.15.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
